# learnopengl-attendee

./: .gitignore  .gitmodules  README.md
01-Creating_a_window/: CMakeLists.txt  README.md
01-Creating_a_window/src/: main.cpp
02-Hello_triangle/: README.md
02-Hello_triangle/src/: main.cpp
03-Shaders/: CMakeLists.txt  README.md
03-Shaders/lib/: glfw
03-Shaders/shader/: basic.vert
03-Shaders/src/: Context.cpp  Context.hpp  Shader.cpp  Shader.hpp  callbacks.cpp  callbacks.hpp  main.cpp  utils.cpp
04-Textures/: README.md
04-Textures/lib/glad/: CMakeLists.txt
04-Textures/lib/glad/include/glad/: glad.h
04-Textures/shader/: basic.frag  basic.vert  texture.frag  texture.vert
04-Textures/src/: Context.cpp  main.cpp  utils.hpp
05-Transformations/: CMakeLists.txt
05-Transformations/lib/glad/src/: glad.c
05-Transformations/shader/: transform.vert
05-Transformations/src/: Context.cpp  Context.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.hpp  main.cpp  random-words.hpp  utils.cpp  utils.hpp
06-Coordinate-Systems/: CMakeLists.txt
06-Coordinate-Systems/lib/: glm
06-Coordinate-Systems/shader/: coordinates.frag  coordinates.vert  texture.vert
06-Coordinate-Systems/src/: Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.hpp  Texture.cpp  main.cpp  utils.cpp  utils.hpp
